--- a/keynote/Chilamkurti.htm
+++ b/keynote/Chilamkurti.htm
@@ -7,11 +7,10 @@ title: ICEA 2023
           <div>
                <h2 style="color:#0000FF">Keynote Speech Information-Naveen Chilamkurti</h2><br>
                <img src="https://icea-conf.github.io/2023/image/Chilamkurti.jpg" alt="" style="max-width: 20%; height: auto;"><br>
-          </div>
-          <div>
-               <ul>
-               <li> Associate Dean ( International Programs), Head of Cybersecurity Discipline, Fellow IET </li>               
-               </ul>     
+
+               
+                Associate Dean ( International Programs), Head of Cybersecurity Discipline, Fellow IET <br>               
+               
           </div>
           <div>
                <b>Biography:</b> Prof Naveen Chilamkurti is the Associate Dean (International Partnerships) and Head of the Cybersecurity discipline at La Trobe University, Melbourne, Australia. Naveen serves as the Technical Editor of the highly-ranked IEEE Wireless Communications Magazine.   He is also a fellow of IET (Institute of Engineering and Technology, UK). Naveen has supervised 50 research students at Honours, Master, and PhD levels; 10 PhD students have already graduated. He has successfully attracted 20 research grants since 2000 to support PhD Scholarships, fellowships, and travel grants for research collaboration. He has published 350 journal and conference papers, including IEEE and ACM Transactions. He is active in editing and authoring 9 books with Elsevier, Springer, IGI-Global and NOVA publishers. Prof. Chilamkurti secured 24 competitive grants from various sources, including SMART SAT CRC, Data61/CSIRO, Defence Science Institute, Australian Academy of Science, and OPTUS telecommunications. In 2021, I received the inaugural Australia-India Cybersecurity Infrastructure Grant jointly funded by DFAT and the Indian government. I delivered keynote speeches at various international conferences and workshops. I have an extensive research record in cybersecurity. I have published 350 journals and conference articles in Cybersecurity, IoT, Anomaly detection in IoT, the Internet of Medical Things, Wireless Security, Federated Learning in IoT, wireless multimedia, wireless sensor networks, and software-defined networks. I also edited and authored 9 books with Elsevier, Springer, IGI-Global and NOVA publishers. I have an excellent record in securing various competitive grants and awards. In 2019, I was ranked in the top 2% of researchers worldwide based on the publication citations in the information systems and networks category. In 2012 and again in 2018, I received the Australia-India Early Career Fellowship from the Dept. of Industry Innovation, Science, Research and Tertiary Education. I have successfully attracted 20 research grants since 2000 to support PhD Scholarships, fellowships, and travel grants for research collaboration. <br>    
