--- a/keynote/Chilamkurti.htm
+++ b/keynote/Chilamkurti.htm
@@ -6,10 +6,10 @@ title: ICEA 2023
      <div class="content">
           <div>
                <h2 style="color:#0000FF">Keynote Speech Information-Naveen Chilamkurti</h2><br>
-               <img src="https://icea-conf.github.io/2023/image/NChilamkurti.jpg" alt="" style="max-width: 20%; height: auto;"><br>
+               <img src="https://icea-conf.github.io/2023/image/NChilamkurti.jpg" alt="" style="max-width: 20%; height: auto;"><be>
 
                
-                Associate Dean ( International Programs), Head of Cybersecurity Discipline, Fellow IET <br>               
+                Associate Dean ( International Programs), Head of Cybersecurity Discipline, Fellow IET <br><br>               
                
           </div>
           <div>
