--- a/committee/index.html
+++ b/committee/index.html
@@ -60,7 +60,7 @@ title: ICEA 2023
 
 				<h3>Tutorial Chair</h3>
 				<ul>
-					<li><b>Lee Shih-Hsiung</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Shih-Hsiung Lee</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 		</div>
 		
