--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: ACM ICEA 2023
                                           <li>Submission Due Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>September 15, 2023 </del>October 15, 2023 </b>
+                                          <b>&nbsp; &nbsp; <del>September 15, 2023 </del> <p style="background-color:Tomato;">October 15, 2023 </p></b>
                                     </td>
                               </tr>
                               <tr>
