--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b>
+                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del><font color="Tomato">November 5, 2023 </font></b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,7 +39,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b>
+                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del><font color="Tomato">November 10, 2023 </font></b>
                                     </td>
                               </tr>
                               <tr>
@@ -47,7 +47,7 @@ title: ACM ICEA 2023
                                           <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 20, 2023</del></b>
+                                          <b>&nbsp; &nbsp; <del>October 20, 2023</del><font color="Tomato">November 10, 2023 </font></b>
                                     </td>
                               </tr>
                               <tr>
@@ -55,7 +55,7 @@ title: ACM ICEA 2023
                                           <li>Late Registration Due: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>November 10, 2023</del></b>
+                                          <b>&nbsp; &nbsp; <del>November 10, 2023</del><font color="Tomato">November 20, 2023 </font></b>
                                     </td>
                               </tr>
                               <tr>
