--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ title: ACM ICEA 2023
                                           <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 20, 2023</del><font color="Tomato">November 10, 2023 </font></b>
+                                          <b>&nbsp; &nbsp; November 10, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -55,7 +55,7 @@ title: ACM ICEA 2023
                                           <li>Late Registration Due: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>November 10, 2023</del><font color="Tomato">November 20, 2023 </font></b>
+                                          <b>&nbsp; &nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
                               <tr>
