--- a/committee/index.html
+++ b/committee/index.html
@@ -61,6 +61,7 @@ title: ACM ICEA 2023
 				<h3>Tutorial Chair</h3>
 				<ul>
 					<li><b>Shih-Hsiung Lee</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Chih-Hsueh Lin</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 		</div>
 		
