--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: ACM ICEA 2023
                                           <li>Submission Due Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>September 15, 2023 </del> <font color="Tomato">October 15, 2023 </font></b>
+                                          <b>&nbsp; &nbsp; <del>September 15, 2023</del></b><b style="color:#FF0000">&nbsp; October 15, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -31,7 +31,7 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del><font color="Tomato">November 5, 2023 </font></b>
+                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b><b style="color:#FF0000">&nbsp; November 5, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,7 +39,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del><font color="Tomato">November 10, 2023 </font></b>
+                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b><b style="color:#FF0000">&nbsp; November 10, 2023</b>
                                     </td>
                               </tr>
                               <tr>
