--- a/papers/index.html
+++ b/papers/index.html
@@ -104,7 +104,7 @@ title: ACM ICEA 2023
                                           <li>Submission Due Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; September 15, 2023</del></b> <b style="color:#FF0000">&nbsp; October 15, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>September 15, 2023</del></b> <b style="color:#FF0000">&nbsp; October 15, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -112,7 +112,7 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; October 6, 2023</del></b> <b style="color:#FF0000">&nbsp; November 5, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b> <b style="color:#FF0000">&nbsp; November 5, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -120,7 +120,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; October 13, 2023</del></b> <b style="color:#FF0000">&nbsp; November 10, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b> <b style="color:#FF0000">&nbsp; November 10, 2023</b>
                                     </td>
                               </tr>
                               <tr>
