--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b><b style="color:#FF0000">&nbsp; November 5, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b><del><b style="color:#FF0000">&nbsp; November 5, 2023</b></del>
+                                          <b style="color:#FF0000">&nbsp; November 13, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,7 +40,8 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b><b style="color:#FF0000">&nbsp; November 10, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b><del><b style="color:#FF0000">&nbsp; November 10, 2023</b></del>
+                                          <b style="color:#FF0000">&nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
                               <tr>
