--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b><del><b style="color:#FF0000">&nbsp; November 5, 2023</b></del>
+                                          <b>&nbsp; &nbsp; <del>October 6, 2023</del></b>
                                           <b style="color:#FF0000">&nbsp; November 13, 2023</b>
                                     </td>
                               </tr>
@@ -40,7 +40,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b><del><b style="color:#FF0000">&nbsp; November 10, 2023</b></del>
+                                          <b>&nbsp; &nbsp; <del>October 13, 2023</del></b>
                                           <b style="color:#FF0000">&nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
@@ -49,7 +49,8 @@ title: ACM ICEA 2023
                                           <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 10, 2023</b>
+                                          <del><b>&nbsp; &nbsp; November 10, 2023</b></del>
+                                          <b>&nbsp; &nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -57,7 +58,8 @@ title: ACM ICEA 2023
                                           <li>Late Registration Due: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 20, 2023</b>
+                                          <del><b>&nbsp; &nbsp; November 20, 2023</b></del>
+                                          <b>&nbsp; &nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
                               <tr>
