--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ title: ACM ICEA 2023
                                           <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <del><b>&nbsp; &nbsp; November 10, 2023</b></del>
+                                          <b>&nbsp; &nbsp; <del>November 10, 2023</del></b>
                                           <b>&nbsp; &nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
@@ -58,7 +58,7 @@ title: ACM ICEA 2023
                                           <li>Late Registration Due: </li>
                                     </td>
                                     <td>
-                                          <del><b>&nbsp; &nbsp; November 20, 2023</b></del>
+                                          <b>&nbsp; &nbsp; <del>November 20, 2023</del></b>
                                           <b>&nbsp; &nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
