--- a/committee/index.html
+++ b/committee/index.html
@@ -24,7 +24,7 @@ title: ACM ICEA 2023
 					<li><b>Jimmy Ming-Tai Wu</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 
-				<h3>General Co-Chair</h3>
+				<h3>General Co-Chairs</h3>
 				<ul>
 					<li><b>Ching-Chang Lee</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 					<li><b>Yao-Chung Chang</b>, National Taitung University, Taiwan</li>
@@ -51,11 +51,13 @@ title: ACM ICEA 2023
 				<h3>Financial Chair</h3>
 				<ul>
 					<li><b>Ko-Wei Huang</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Ruei-Hau Hsu</b>, National Sun Yat-sen University, Taiwan</li>
 				</ul>
 
 				<h3>Web Chair</h3>
 				<ul>
 					<li><b>Shih-Pang Tseng</b>, Changzhou College of Information Technology, China</li>
+					<li><b>Arijit Karati</b>, National Sun Yat-sen University, Taiwan</li>
 				</ul>
 
 				<h3>Tutorial Chair</h3>
