--- a/registration/index.html
+++ b/registration/index.html
@@ -33,6 +33,11 @@ title: ACM ICEA 2023
                <ul class="ul-style">
                     <li class="li-style"><a style="text-align: justify">All skiers must be individually insured, and the conference is not responsible.</a></li>
                </ul></br>
+
+               <h3>1. CREDIT CARD PAYMENT</h3>
+               <ul class="ul-style">
+                    <li class="li-style"><a style="text-align: justify"><a href="">Link</a><br><a> </li><br>
+               </ul>
 <!--
                <h3><u>High1 Accommodation Form</u></h3>
                <ul class="ul-style">
