--- a/registration/index.html
+++ b/registration/index.html
@@ -36,7 +36,7 @@ title: ACM ICEA 2023
 
                <h3>1. CREDIT CARD PAYMENT</h3>
                <ul class="ul-style">
-                    <li class="li-style"><a style="text-align: justify"><a href="">Link</a><br><a> </li><br>
+                    <li class="li-style"><a style="text-align: justify"><a href="https://tadsbaservice.kktix.cc/events/acmicea2023">Link</a><br><a> </li><br>
                </ul>
 <!--
                <h3><u>High1 Accommodation Form</u></h3>
