--- a/registration/index.html
+++ b/registration/index.html
@@ -38,6 +38,14 @@ title: ACM ICEA 2023
                <ul class="ul-style">
                     <li class="li-style"><a style="text-align: justify"><a href="https://tadsbaservice.kktix.cc/events/acmicea2023">Link</a><br><a> </li><br>
                </ul>
+                         
+               <h3>2. BANK TRANSFER (Only Taiwanese)</h3>
+               <ul class="ul-style">
+                    <li class="li-style"><a style="text-align: justify">BANK: 上海商業儲蓄銀行新店分行</a></li><br>
+                    <li class="li-style"><a style="text-align: justify">ACCOUNT Name: 臺灣資料科學與商業應用協會 許晋雄</a></li><br>
+                    <li class="li-style"><a style="text-align: justify">ACCOUNT NUMBER: 29203000401576</a></li><br>
+               </ul>
+                         
 <!--
                <h3><u>High1 Accommodation Form</u></h3>
                <ul class="ul-style">
@@ -45,7 +53,7 @@ title: ACM ICEA 2023
                     <li class="li-style"><a style="text-align: justify"><b><a href="https://icea-conf.github.io/2023/registration/high1-reservation-form.hwp">Accommodation Form Download</a></b></a></li>
                </ul><br>
 
-               <h3>1. BANK TRANSFER (Foreigner, Korean)</h3>
+               <h3>1. BANK TRANSFER (Only Taiwanese)</h3>
                <ul class="ul-style">
                     <li class="li-style"><a style="text-align: justify">BANK: National Agricultural Cooperative Federation</a></li><br>
                     <li class="li-style"><a style="text-align: justify">ACCOUNT NUMBER: 351-0489-8456-73</a></li><br>
