--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ title: ACM ICEA 2023
                                     </td>
                                     <td>
                                           <b>&nbsp; &nbsp; <del>November 10, 2023</del></b>
-                                          <b style="color:#FF0000">&nbsp; &nbsp; November 22, 2023</b>
+                                          <b style="color:#FF0000">&nbsp; November 22, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -59,7 +59,7 @@ title: ACM ICEA 2023
                                     </td>
                                     <td>
                                           <b>&nbsp; &nbsp; <del>November 20, 2023</del></b>
-                                          <b style="color:#FF0000">&nbsp; &nbsp; November 30, 2023</b>
+                                          <b style="color:#FF0000">&nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
                               <tr>
