--- a/papers/index.html
+++ b/papers/index.html
@@ -128,7 +128,7 @@ title: ACM ICEA 2023
                                           <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 10, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>November 10, 2023</del></b><b style="color:#FF0000">&nbsp; November 22, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -136,7 +136,7 @@ title: ACM ICEA 2023
                                           <li>Late Registration Due: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 20, 2023</b>
+                                          <b>&nbsp; &nbsp; <del>November 20, 2023</del></b><b style="color:#FF0000">&nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
                               <tr>
