--- a/keynote/lin.htm
+++ b/keynote/lin.htm
@@ -7,6 +7,11 @@ title: ICEA 2023
           <div>
                <h2 style="color:#0000FF">Keynote Speech Information-Jerry Chun-Wei Lin</h2><br>
                <img src="https://icea-conf.github.io/2023/image/Jerry.jpg" alt="" style="max-width: 20%; height: auto;">    
+               <ol>
+                    <li> Professor at the Department of Computer Science, Electrical Engineering and Mathematical Sciences, Western Norway University of Applied Sciences, Bergen, Norway </li>
+                    <li> Editor-in-Chief, Data Science and Pattern Recognition (DSPR) Journal </li>
+                    <li> Fellow, IET</li>
+               </ol> 
           </div>
           <div>
                <b>Biography</b>: Jerry Chun-Wei Lin is currently working as the full Professor at the Department of Computer Science, Electrical Engineering and Mathematical Sciences, Western Norway University of Applied Sciences, Bergen, Norway. He has 100+ papers in IEEE/ACM journals and international conferences. His research interests include data mining and analytics, soft computing, deep learning/machine learning, optimization, IoT applications, and privacy-preserving and security technologies. He is the Editor-in-Chief of Data Science and Pattern Recognition (DSPR) journal, Associate Editor/Editor for 15 SCI journals including IEEE Transactions on Neural Networks and Learning Systems, IEEE Transactions on Cybernetics, IEEE Transactions on Dependable and Secure Computing, Information Sciences, among others. He is the leader of the well-known SPMF project, which provides more than 200 data mining algorithms and has been widely cited in many different applications. He has been awarded as the Most Cited Chinese Researcher in 2018, 2019, and 2020 by Elsevier/Scopus and Top-2% Scientist in 2019, 2020, 2021, and 2022 respectively by Stanford University. He is a Fellow of IET (FIET), ACM Distinguished Scientist, and IEEE Senior Member. 
