--- a/program/index.html
+++ b/program/index.html
@@ -19,5 +19,11 @@ title: ACM ICEA 2023
                     <p>- Link: <a target="_blank" href="">Session 8</a></p>
                </ul>
           </div></br>
+          <div>
+               <h2 style="color:#0000FF">Program at a glance</h2>
+          </div>     
+          <div>
+               <h2 style="color:#0000FF">Full Program</h2>
+          </div>   
      </div>      
 </div>
