--- a/program/index.html
+++ b/program/index.html
@@ -21,7 +21,7 @@ title: ACM ICEA 2023
           </div></br>
           <div>
                <h2 style="color:#0000FF">Program at a glance</h2>
-               <img src="https://icea-conf.github.io/2023/image/program-glance" alt="" style="max-width: 80%; height: auto;">
+               <img src="https://icea-conf.github.io/2023/image/program-glance.jpg" alt="" style="max-width: 80%; height: auto;">
           </div>     
           <div>
                <h2 style="color:#0000FF">Full Program</h2>
