--- a/program/index.html
+++ b/program/index.html
@@ -3,10 +3,17 @@ layout: default
 title: ACM ICEA 2023
 ---
 <div class="container">
+          <div>
+               <h2 style="color:#0000FF">Program at a glance</h2>
+               <img src="https://icea-conf.github.io/2023/image/program-glance.jpg" alt="" style="max-width: 80%; height: auto;">
+          </div>     
+          <div>
+               <h2 style="color:#0000FF">Full Program</h2>
+          </div>   
+     
      <div class="content">
           <div>
-               <h2 style="color:#0000FF">Program Information</h2>
-               <h3><u>Online Link</u></h3>
+               <h2 style="color:#0000FF">Online Link</h2>        
                <p>Conference system: Microsoft Teams</p>
                <ul>
                     <li><p>December 15</p></li>
@@ -19,12 +26,5 @@ title: ACM ICEA 2023
                     <p>- Link: <a target="_blank" href="">Session 8</a></p>
                </ul>
           </div></br>
-          <div>
-               <h2 style="color:#0000FF">Program at a glance</h2>
-               <img src="https://icea-conf.github.io/2023/image/program-glance.jpg" alt="" style="max-width: 80%; height: auto;">
-          </div>     
-          <div>
-               <h2 style="color:#0000FF">Full Program</h2>
-          </div>   
      </div>      
 </div>
