--- a/venue/index.html
+++ b/venue/index.html
@@ -1,1 +1,18 @@
-fff
+---
+layout: default
+title: ACM ICEA 2023
+---
+<div class="container">
+    <div class="content">
+          
+          <div>
+               <h2 style="color:#0000FF">Conference Venue</h2>
+               <img src="" alt="" style="max-width: 80%; height: auto;">
+          </div>     
+              
+          <div>
+               <h2 style="color:#0000FF">Banquet Venue</h2>
+                <img src="" alt="" style="max-width: 80%; height: auto;">
+          </div>   
+     </div>      
+</div>
