--- a/venue/index.html
+++ b/venue/index.html
@@ -7,7 +7,7 @@ title: ACM ICEA 2023
           
           <div>
                <h2 style="color:#0000FF">Conference Venue</h2>
-               <img src="" alt="" style="max-width: 80%; height: auto;">
+               <img src="https://icea-conf.github.io/2023/image/map.jpg" alt="" style="max-width: 80%; height: auto;">
           </div>     
               
           <div>
