--- a/venue/index.html
+++ b/venue/index.html
@@ -9,6 +9,13 @@ title: ACM ICEA 2023
                <h2 style="color:#0000FF">Conference Venue</h2>
                Library, National Kaohsiung University of Science and Technology-First Campus, No1, University Rd., Yanchao Dist., Kaohsiung City, 824, Taiwan <br>
                <img src="https://icea-conf.github.io/2023/image/map.jpg" alt="" style="max-width: 100%; height: auto;">
+                <ol>
+                    <li> By Bus: Kaohsiung University of Science and Technology (First Campus), Red 58B, Bus 97, and Bus 7C (East entrances) </li>
+                    <li> By Train: From Nanzih Train Station, Transfer to Bus 97 (Kaohsiung Study Special) or Red 58 City Bus to Kaohsiung University of Science and Technology (First Campus).</li>
+                    <li> By Taiwan High-Speed Rail (THSR): From Zuoying HSR Station, Take the MRT to R21 Metropolitan Park Station or R22 Qingpu Station and transfer to a bus. </li>
+                    <li> By MRT1: From Metropolitan Park Station, Transfer to Bus Red 58A, Red 58B, or Bus 7C to Kaohsiung University of Science and Technology (First Campus).
+                    <li> By MRT2: From Qingpu Station, Transfer to Bus 7C to Kaohsiung University of Science and Technology (First Campus). </li>
+               </ol> 
           </div>     
               
           <div>
