--- a/venue/index.html
+++ b/venue/index.html
@@ -10,7 +10,7 @@ title: ACM ICEA 2023
                Library, National Kaohsiung University of Science and Technology-First Campus, No1, University Rd., Yanchao Dist., Kaohsiung City, 824, Taiwan <br>
                <img src="https://icea-conf.github.io/2023/image/map.jpg" alt="" style="max-width: 100%; height: auto;">
                 <ol>
-                    <li> <strong> By Bus:</strong> Kaohsiung University of Science and Technology (First Campus), Red 58B, Bus 97, and Bus 7C (East entrances) </li>
+                    <li> <strong> By Bus:</strong> Red 58B, Bus 97, and Bus 7C (East entrances) </li>
                     <li> <strong> By Train:</strong> From Nanzih Train Station, Transfer to Bus 97 (Kaohsiung Study Special) or Red 58 City Bus to Kaohsiung University of Science and Technology (First Campus).</li>
                     <li> <strong> By Taiwan High-Speed Rail (THSR):</strong> From Zuoying HSR Station, Take the MRT to R21 Metropolitan Park Station or R22 Qingpu Station and transfer to a bus. </li>
                     <li> <strong> By MRT1:</strong> From Metropolitan Park Station, Transfer to Bus Red 58A, Red 58B, or Bus 7C to Kaohsiung University of Science and Technology (First Campus).
@@ -21,6 +21,12 @@ title: ACM ICEA 2023
           <div>
                <h2 style="color:#0000FF">Banquet Venue</h2>
                Kaohsiung Marriott Hotel, No. 222, Long Desin Rd., Gushan District, Kaohsiung, Taiwan
+               <ol>
+                    <li> <strong> By Taxi:</strong> From NKUST, First Campus, a car ride to the hotel takes about 25 min <\br>
+                                                    From Kaohsiung International Airport, a car ride to the hotel takes about 30 min (Estimated cab fare is NTD 315 - 345) <\br>
+                                                    From Zuoying HSR Station, a car ride to the hotel takes about 15 min. (Estimated cab fare is NTD 165 - 185)  </li>
+                    <li> <strong> By MRT:</strong> MRT From R13 Aozihdi EXIT 2, walk about 500m to Kaohsiung Marriott Hotel. The walk should take about 8 min.</li>
+               </ol> 
               
           </div>   
      </div>      
