--- a/venue/index.html
+++ b/venue/index.html
@@ -22,9 +22,7 @@ title: ACM ICEA 2023
                <h2 style="color:#0000FF">Banquet Venue</h2>
                Kaohsiung Marriott Hotel, No. 222, Long Desin Rd., Gushan District, Kaohsiung, Taiwan
                <ol>
-                    <li> <strong> By Taxi:</strong> From NKUST, First Campus, a car ride to the hotel takes about 25 min <\br>
-                                                    From Kaohsiung International Airport, a car ride to the hotel takes about 30 min (Estimated cab fare is NTD 315 - 345) <\br>
-                                                    From Zuoying HSR Station, a car ride to the hotel takes about 15 min. (Estimated cab fare is NTD 165 - 185)  </li>
+                    <li> <strong> By Taxi:</strong> From NKUST, First Campus, a car ride to the hotel takes about 25 min. 
                     <li> <strong> By MRT:</strong> MRT From R13 Aozihdi EXIT 2, walk about 500m to Kaohsiung Marriott Hotel. The walk should take about 8 min.</li>
                </ol> 
               
