--- a/venue/index.html
+++ b/venue/index.html
@@ -7,6 +7,9 @@ title: ACM ICEA 2023
           
           <div>
                <h2 style="color:#0000FF">Conference Venue</h2>
+               <br>Shuttle Bus 
+
+               <br>    
                Library, National Kaohsiung University of Science and Technology-First Campus, No1, University Rd., Yanchao Dist., Kaohsiung City, 824, Taiwan <br>
                <img src="https://icea-conf.github.io/2023/image/map.jpg" alt="" style="max-width: 100%; height: auto;">
                 <ol>
