--- a/venue/index.html
+++ b/venue/index.html
@@ -7,9 +7,11 @@ title: ACM ICEA 2023
           
           <div>
                <h2 style="color:#0000FF">Conference Venue</h2>
-              Shuttle Bus1: Kaohsiung Metropolitan Park MRT Station (R21) Exit 1 to Parking Lot no. 6, NKUST, AM8:00- AM9:00 <br>
-              Shuttle Bus2: Parking Lot no. 6, NKUST to Kaohsiung Metropolitan Park MRT Station (R21) Exit 1, PM4:30- PM6:00 <br>               
-               Library, National Kaohsiung University of Science and Technology-First Campus, No1, University Rd., Yanchao Dist., Kaohsiung City, 824, Taiwan <br>
+               <ol>
+              <oi>Shuttle Bus1: Kaohsiung Metropolitan Park MRT Station (R21) Exit 1 to Parking Lot no. 6, NKUST, AM8:00- AM9:00 <br>
+              <oi>Shuttle Bus2: Parking Lot no. 6, NKUST to Kaohsiung Metropolitan Park MRT Station (R21) Exit 1, PM4:30- PM6:00 <br>               
+              </oi>>
+                  Library, National Kaohsiung University of Science and Technology-First Campus, No1, University Rd., Yanchao Dist., Kaohsiung City, 824, Taiwan <br>
                <img src="https://icea-conf.github.io/2023/image/map.jpg" alt="" style="max-width: 100%; height: auto;">
                 <ol>
                     <li> <strong> By Bus:</strong> Red 58B, Bus 97, and Bus 7C (East entrances) </li>
