--- a/program/index.html
+++ b/program/index.html
@@ -21,7 +21,7 @@ title: ACM ICEA 2023
                <p>Conference system: Microsoft Teams</p>
                <ul>
                     <li><p>December 15</p></li>
-                    <p>- Link: <a target="_blank" href="meet.google.com/siy-cbgo-opi">Keynote Speech III</a></p>
+                    <p>- Link: <a target="_blank" href="meet.google.com/siy-cbgo-opi">Keynote Speech III, https://meet.google.com/siy-cbgo-opi</a></p>
 
                     <li><p>December 15</p></li>
                     <p>- Link: <a target="_blank" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MGVhMjE0NTMtODMzMC00ZjAxLWJjMWYtMGY3N2JmMDA5ZTQy%40thread.v2/0?context=%7b%22Tid%22%3a%228d689cdb-998c-4078-a2df-1ff59cb5435d%22%2c%22Oid%22%3a%22d61104e0-d531-48b9-845b-a03e6c946a85%22%7d">Session 6</a></p>
