Add mention of 2024 conference to main page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ title: ACM ICEA 2023
             <img src="https://icea-conf.github.io/2023/image/ICEA2023-Background-r1.jpg" alt="" style="max-width: 100%; height: auto;">
       
             <div>
+                  <p>Information for the 2024 conference can be found <a href="https://icea-conf.github.io/2024/">here</a>: <a href="https://icea-conf.github.io/2024/">https://icea-conf.github.io/2024/</a></p>
+            </div>
+
+            <div>
                   <h3>Important Dates</h3>
                   <table>
                         <tbody>
